--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
         <ul>
             <li><strong>AL BOURAK RENT CAR</strong></li>
-            <li>Email: <a href="mailto:contact@albourak.ma">contact@albourak.ma</a></li>
-            <li>Phone: +212 6 12 34 56 78</li>
+            <li>Email: <a href="mailto:info@albourakrentcar.info">info@albourakrentcar.info</a></li>
+            <li>Phone: +212 7 08 27 74 46</li>
             <li>Address: 5 Rue Al Farabi, Tanger, Morocco</li>
         </ul>
 
